--- a/talk.html
+++ b/talk.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">create a web page</a></section><section class="mbr-section form1 cid-r5aYecmYRP" id="form1-17">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="mbr-section form1 cid-r5aYecmYRP" id="form1-17">
 
     
 
@@ -77,7 +77,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iS/AfPgKxvgQP5iPhEgau5VNwtWO3j3SduVVipyY7CaHgvo3mFJ1mNd3q7Zaw2vfEqpv1T6KSIrYCyATsJ/hq08rA3J2vvTdgFQTo3z+AnlfqJzH3m/4ZwtBlFOOJbJN">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gwCNfFivS1c/leuyznk9AqmCTMpBbsCzk5J8wGIkRPArXS+MdVTKmmX/q4leDduB0K6bb6C3nAuLdcB1y9helwyFpTkMjx2F2PvJ2SslQkAXtlrt6XaHnhwjr4uXvaSp">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -123,7 +123,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.com/">
-                        <img src="assets/images/logo211.png" alt="Mobirise">
+                        <img src="assets/images/logo20.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
