create github pages

--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/f">simple web creator</a></section><section class="accordion1 cid-r53T7tGY0m" id="accordion1-q">
+<section class="engine"><a href="https://mobiri.se/c">site builder</a></section><section class="accordion1 cid-r53T7tGY0m" id="accordion1-q">
 
     
 
@@ -158,7 +158,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.com/">
-                        <img src="assets/images/logo20.png" alt="Mobirise">
+                        <img src="assets/images/logo21.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
