--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="cid-r546W2R0wf mbr-fullscreen mbr-parallax-background" id="header2-w">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="cid-r546W2R0wf mbr-fullscreen mbr-parallax-background" id="header2-w">
 
     
 
@@ -136,7 +136,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.com/">
-                        <img src="assets/images/logo20.png" alt="Mobirise">
+                        <img src="assets/images/logo22.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
