--- a/talk.html
+++ b/talk.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section form1 cid-r5aYecmYRP" id="form1-17">
+<section class="engine"><a href="https://mobiri.se/s">bootstrap themes</a></section><section class="mbr-section form1 cid-r5aYecmYRP" id="form1-17">
 
     
 
@@ -77,7 +77,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NmlFP9rU7Gq7y9Wk0By03nLmZtfZVeUKb2zlqid5TmPhdoXnUyImkUa7CRNefbUVNus1o8ox+myuTLTgVTeelWu9QXTXTtN4JHdvModPxzRl77FGx0uzbXQI5i8+V7YD">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hVBJd1hSHAs6HxdmD5SEu20PTfuA6rEVjs4IKCuaR5OZgwXjhA5CsFuQDRRNoPhcxoVb2kjTY9Gde2HVBDqYLSngZKLx3PRg607NYJ9rv1bgrJDg3D2P/k2ewXSU0yIl">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -123,7 +123,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.com/">
-                        <img src="assets/images/logo20.png" alt="Mobirise">
+                        <img src="assets/images/logo22.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
