--- a/talk.html
+++ b/talk.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">free website builder</a></section><section class="mbr-section form1 cid-r5aYecmYRP" id="form1-17">
+<section class="engine"><a href="https://mobiri.se/c">free web builder</a></section><section class="mbr-section form1 cid-r5aYecmYRP" id="form1-17">
 
     
 
@@ -77,7 +77,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WdgoFdlmSnaD3BjcCRgWnNxjj+l3dfhCpS8AITl67V/jNuYp8cvTpjgHlrclAo47ZzpnVx+cCBvO53FN5KGTb4te1LdbYqneXM0dlC63xebLCvbm7JvtCVnZizMBYU4o">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DPCo1S5uZY8tgycj3HmeB3egl3BBHXVWIa+PDSSMWOYgXEammF5q5G8HB+ec6YxeKZzEUUpE4jOqw/ihH3aylfHOs2XAd+Jpy1dVzCNjSd9tGHqI5K8S8eFS7YcI2CDl">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -123,7 +123,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.com/">
-                        <img src="assets/images/logo21.png" alt="Mobirise">
+                        <img src="assets/images/logo20.png" alt="Mobirise">
                     </a>
                 </div>
             </div>
